--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "scrypt-ts": "^1.3.18",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject",
+    "pretest": "npx scrypt-cli compile",
+    "build:contract": "npx scrypt-cli compile",
+    "deploy:contract": "npx ts-node ./scripts/deploy.ts",
+    "verify:contract": "npx scrypt-cli verify $(cat .scriptHash) ./src/contracts/ordinals1satDemo.ts",
+    "genprivkey": "npx ts-node ./scripts/privateKey.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "react-app-rewired": "^2.2.1"
   }
 }
