--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@types/react-dom": "^18.2.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-images-uploading": "^3.1.7",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "scrypt-ord": "^1.0.11",
     "scrypt-ts": "^1.3.18",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
