--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ordinals-1sat-demo",
   "version": "0.1.0",
+  "homepage": "https://inscribe.scrypt.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -13,6 +14,7 @@
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-images-uploading": "^3.1.7",
@@ -24,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
