--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "scrypt-ord": "^1.0.14",
     "scrypt-ts": "^1.3.19",
     "typescript": "^4.9.5",
+    "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
